change remove(0) to removeFirst()